[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ilrl"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
        'opencv-python',
        'torch',
        'torchvision',
        'scikit-image==0.19.3',
        'pygame==2.1.2',
        'pymunk==6.2.1',
        'gym==0.26.2',
        'shapely==1.8.4',
        'gdown',
        'zarr==2.12.0',
        'diffusers==0.18.2',
        'huggingface_hub==0.25.0',
        'imageio',
        'imageio[ffmpeg]',
]

[tool.setuptools.packages.find]
include = ["ilrl", "ilrl.*"]